--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "sources/poky"]
 	path = sources/poky
-	url = git://git.yoctoproject.org/poky.git
+	url = https://github.com/yoctoproject/poky
 [submodule "sources/meta-freescale"]
 	path = sources/meta-freescale
-	url = git://git.yoctoproject.org/meta-freescale.git
+	url = https://github.com/Freescale/meta-freescale
 [submodule "sources/meta-openembedded"]
 	path = sources/meta-openembedded
 	url = git://git.openembedded.org/meta-openembedded
